Implemented TradingTimeIndicator and did some optimizations with it on the backtester

--- a/NinjaTrader_Client/Trader/Notes/Todo.txt
+++ b/NinjaTrader_Client/Trader/Notes/Todo.txt
@@ -1,5 +1,11 @@
-﻿Übertragung aus ferne
-Charting
-
+﻿Visualisierung
 Indicator: MA
-Handel
+
+Flat on Weekends
+
+Big backtests HFU
+
+Small timeframe strategies
+
+NTF:
+	FXCM API
