Layed the foundation for the visualization

--- a/NinjaTrader_Client/Trader/Notes/Todo.txt
+++ b/NinjaTrader_Client/Trader/Notes/Todo.txt
@@ -1,9 +1,10 @@
 ﻿Visualisierung
-Indicator: MA
+
+Inverter
 
 Big backtests HFU
 
-Small timeframe strategies
+Indicator: MA
 
 More analysis and data mining
 
