Polished the visualization a bit

--- a/NinjaTrader_Client/Trader/Notes/Todo.txt
+++ b/NinjaTrader_Client/Trader/Notes/Todo.txt
@@ -1,4 +1,9 @@
 ﻿Visualisierung
+	Farbcoderiung
+	Namensgebung
+	Speichern (direkt öffnen)
+
+	Analyse der einzelnen Strategien (Seltsame history teilweise)
 
 Inverter
 
