Fixed the sql queries in SQLLite and Mongodb in getPrice and getData

--- a/NinjaTrader_Client/Trader/Notes/Todo.txt
+++ b/NinjaTrader_Client/Trader/Notes/Todo.txt
@@ -1,11 +1,12 @@
 ﻿Visualisierung
 	Farbcoderiung
-	Namensgebung
-	Speichern (direkt öffnen)
 
 	Analyse der einzelnen Strategien (Seltsame history teilweise)
 
-Inverter
+Decition Components
+Riskmanagement Components
+
+Inverter for components
 
 Big backtests HFU
 
